[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/AddQuantileWindowPopup.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="AddQuantileWindowPopup" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -94.5
margin_right = 144.0
margin_bottom = 94.5
color = Color( 0.223529, 0.223529, 0.223529, 1 )

[node name="MarginContainer" type="MarginContainer" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -94.5
margin_right = 144.0
margin_bottom = 94.5
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="Label" type="Label" parent="Background/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 263.0
margin_bottom = 164.0
size_flags_vertical = 5
text = "Enter quantile and pick color
"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="Background/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 263.0
margin_bottom = 164.0
custom_constants/margin_top = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer/MarginContainer"]
margin_top = 40.0
margin_right = 238.0
margin_bottom = 139.0

[node name="GridContainer" type="GridContainer" parent="Background/MarginContainer/MarginContainer/VBoxContainer"]
margin_right = 238.0
margin_bottom = 20.0
size_flags_horizontal = 5
size_flags_vertical = 5
columns = 2

[node name="Panel0" type="Panel" parent="Background/MarginContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_right = 117.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="QuantileValue" type="LineEdit" parent="Background/MarginContainer/MarginContainer/VBoxContainer/GridContainer/Panel0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.5
margin_top = -12.0
margin_right = 58.5
margin_bottom = 12.0
custom_styles/normal = SubResource( 1 )
align = 1

[node name="QuantileColorButton" type="ColorPickerButton" parent="Background/MarginContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 121.0
margin_right = 238.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 11
color = Color( 1, 1, 1, 1 )

[node name="MarginContainer" type="MarginContainer" parent="Background/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 238.0
margin_bottom = 84.0
custom_constants/margin_top = 40

[node name="ApplyButton" type="Button" parent="Background/MarginContainer/MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 95.0
margin_top = 40.0
margin_right = 143.0
margin_bottom = 60.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
size_flags_vertical = 0
text = "Apply"

[connection signal="pressed" from="Background/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/ApplyButton" to="." method="_on_ApplyButton_pressed"]
